Working Click Filter

--- a/src/app/name-data/name-data.component.css
+++ b/src/app/name-data/name-data.component.css
@@ -1,10 +1,10 @@
-
+@import url('https://www.fontify.me/wf/80aa79216ca7539cf9583442ef908be3');
 
 html{
     font-size:16px;
 }
 *{
-    font-family: serif;
+    font-family: font91409;
 }
 #title{
     text-align:center;
